@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2004-2008 Jive Software, 2016-2024 Ignite Realtime Foundation. All rights reserved.
+ * Copyright (C) 2004-2008 Jive Software, 2016-2025 Ignite Realtime Foundation. All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,6 +34,7 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Set;
@@ -198,7 +199,7 @@ public class AuthCheckFilter implements Filter {
 
         String decodedUrl = null;
         try {
-            decodedUrl = URLDecoder.decode(url, "UTF-8");
+            decodedUrl = URLDecoder.decode(url, StandardCharsets.UTF_8);
         } catch (Exception e) {
             return false;
         }
@@ -334,7 +335,7 @@ public class AuthCheckFilter implements Filter {
             Log.error(e.getMessage(), e);
         }
         try {
-            return loginPage + "?url=" + URLEncoder.encode(buf.toString(), "ISO-8859-1")
+            return loginPage + "?url=" + URLEncoder.encode(buf.toString(), StandardCharsets.ISO_8859_1)
                     + (optionalParams != null ? "&"+optionalParams : "");
         }
         catch (Exception e) {
